# file_encrypter

./: .gitignore  Cargo.toml  README.md  index.html
src/: crypto.rs  error.rs  file_format.rs  main.rs  pdf_handler.rs
